Added minified version of CSS styles

--- a/res/template.html
+++ b/res/template.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Page browser template</title>
 <!-- ###HEADER_ADDITIONS### begin -->
-<link rel="stylesheet" type="text/css" href="###SITE_REL_PATH###res/styles.css" />
+<link rel="stylesheet" type="text/css" href="###SITE_REL_PATH###res/styles_min.css" />
 <!-- ###HEADER_ADDITIONS### end -->
 </head>
 <body>
